# cadex_test_task

./: .gitignore  CMakeLists.txt  readme.md
curves/: CMakeLists.txt
curves/cmake/: curvesConfig.cmake.in
curves/include/curves/: curves.h
curves/src/: curves.cpp
task/: CLIParams.h  CurveGenerator.h  CurveLogger.h  main.cpp
